add default topic in producer; update send data in kafka

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
     environment:
       POSTGRES_PASSWORD: password
       POSTGRES_USER: user
-      POSTGRES_DB: postres
+      POSTGRES_DB: postgres
 
   kafka:
     image: bitnami/kafka:latest
