--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -3,25 +3,29 @@ version: '3.9'
 services:
   postgres:
     image: postgres:17
+    env_file:
+      - .env
     container_name: postgres
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT}:5432"
     volumes:
       - postgres:/var/lib/postgresql/data
     environment:
-      POSTGRES_PASSWORD: password
-      POSTGRES_USER: user
-      POSTGRES_DB: postgres
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_DB: ${POSTGRES_DB}
 
   kafka:
     image: bitnami/kafka:latest
     container_name: kafka
+    env_file:
+      - .env
     ports:
-      - "9092:9092"
+      - "${KAFKA_PORT}:9092"
     environment:
       - KAFKA_BROKER_ID=1
       - KAFKA_CFG_NODE_ID=1
-      - KAFKA_KRAFT_CLUSTER_ID=uJFxkdVDTxigDi1NsyMYRQ
+      - KAFKA_KRAFT_CLUSTER_ID=${KAFKA_KRAFT_CLUSTER_ID}
       - KAFKA_ENABLE_KRAFT=yes
       - KAFKA_CFG_PROCESS_ROLES=broker,controller
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
