--- a/docker/.env
+++ b/docker/.env
@@ -9,3 +9,4 @@ POSTGRES_USER=user
 POSTGRES_PASSWORD=password
 POSTGRES_DB=postgres
 POSTGRES_PORT=5432
+POSTGRES_URL=jdbc:postgresql://localhost:5432/postgres
