--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -8,3 +8,6 @@ scrape_configs:
   - job_name: 'core-service'
     static_configs:
       - targets: [ 'host.docker.internal:3002' ]
+  - job_name: 'postgres'
+    static_configs:
+      - targets: [ 'host.docker.internal:9187' ]
